[gd_scene load_steps=3 format=3 uid="uid://cpjracm4ua184"]

[ext_resource type="Script" uid="uid://d1smsmkvyvxrl" path="res://hud.gd" id="1_e0onf"]
[ext_resource type="AudioStream" uid="uid://c2xo0i1v7g5u5" path="res://assets/SFX/Button.wav" id="2_fccik"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e0onf")

[node name="MakeAntButton" type="Button" parent="."]
layout_mode = 0
offset_left = 513.0
offset_top = 14.0
offset_right = 631.0
offset_bottom = 45.0
text = "make new ant.
100 food"

[node name="MakeRoomButton" type="Button" parent="."]
layout_mode = 0
offset_left = 518.0
offset_top = 63.0
offset_right = 628.0
offset_bottom = 103.0
text = "Make a room.
100 stone"

[node name="MakeBlockadeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 492.0
offset_top = 115.0
offset_right = 630.0
offset_bottom = 155.0
text = "Make a blockade. 
100 stone"

[node name="DistractButton" type="Button" parent="."]
layout_mode = 0
offset_left = 492.0
offset_top = 166.0
offset_right = 630.0
offset_bottom = 197.0
text = "Distract"

[node name="StoneLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 62.0
offset_bottom = 23.0
text = "Stone: 0"

[node name="FoodLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 26.0
offset_right = 56.0
offset_bottom = 49.0
text = "Food: 0"

[node name="Button" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_fccik")
volume_db = -11.174

[connection signal="pressed" from="MakeAntButton" to="." method="_on_make_ant_button_pressed"]
[connection signal="pressed" from="MakeRoomButton" to="." method="_on_make_room_button_pressed"]
[connection signal="pressed" from="MakeBlockadeButton" to="." method="_on_make_blockade_button_pressed"]
[connection signal="pressed" from="DistractButton" to="." method="_on_distract_button_pressed"]
